# ALPSCore-Python-swig

./: CMakeLists.txt  README.md  gf.i
cmake/: sitecustomize.py
common/cmake/: EnableTests.cmake
common/swig/: multi_array.i
gf/: CMakeLists.txt  gf.i  gf_aux.hpp  gf_transform.py
gf_extension/: CMakeLists.txt  aux.hpp  gf_extension.i
swig/: CMakeLists.txt  gf.i  gf_aux.hpp  gf_transform.py  transform.i
test/: CMakeLists.txt  data.h5  gf_test.py  test.py
