function(add_alpscore_swig_module module_name interface_files aux_files)
    set_source_files_properties(${interface_files} PROPERTIES CPLUSPLUS ON)
    swig_add_module(${module_name} python ${interface_files} ${aux_files})
    swig_link_libraries(${module_name} ${SWIG_DEP_LIBRARIES})
    set_source_files_properties(${swig_generated_file_fullname} PROPERTIES COMPILE_FLAGS ${SWIG_EXTRA_COMPILE_FLAGS})
    install(TARGETS _${module_name} DESTINATION ${PYTHON_INSTALL_DIR}/alps)
endfunction()

#set(GF_INTERFACE_FILES gf.i)
#set(GF_SRCS gf_aux.hpp)
#set_source_files_properties(${GF_INTERFACE_FILES} PROPERTIES CPLUSPLUS ON)
#swig_add_module(gf python ${GF_INTERFACE_FILES} ${GF_SRCS})
#swig_link_libraries(gf ${PYTHON_LIBRARIES} ${ALPSCore_LIBRARIES})
#set_source_files_properties(${swig_generated_file_fullname} PROPERTIES COMPILE_FLAGS "-Wno-long-long -Wno-extra")

message("DEBUG " ${CMAKE_INSTALL_PREFIX})

set(SWIG_EXTRA_COMPILE_FLAGS  "-Wno-long-long -Wno-extra")
# TODO: Remove alps-transform and the corresponding link flag once alps-transform module becomes a part of ALPSCore officially.
set(SWIG_DEP_LIBRARIES ${PYTHON_LIBRARIES} ${ALPSCore_LIBRARIES} ${FFTW3_LIBRARIES} alps-transform "-L${CMAKE_INSTALL_PREFIX}/lib")
add_alpscore_swig_module(gf gf.i gf_aux.hpp)
add_alpscore_swig_module(transform transform.i "")

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${PROJECT_BINARY_DIR}
    ${PYTHON_INCLUDE_PATH}
    ${NUMPY_INCLUDE_DIRS}
    ${ALPSCore_INCLUDE_DIR}
)

# Install all Python files (including ones generated by SWIG)
file(GLOB PYTHON_FILES_SRC *.py)
file(GLOB PYTHON_FILES_BIN ${CMAKE_CURRENT_BINARY_DIR}/*.py)
install(FILES ${PYTHON_FILES_SRC} DESTINATION ${PYTHON_INSTALL_DIR}/alps)
install(FILES ${PYTHON_FILES_BIN} DESTINATION ${PYTHON_INSTALL_DIR}/alps)
